--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p class="spotlight-group">
         <b>album art</b>
         <a class="spotlight" href="gallery/blue suinshine.jpg">
-            <img src="thumb" alt="gallery/thumbs/blue suinshine_tn.jpg">
+            <img src="gallery/thumbs/blue suinshine_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="">
             <img src="thumb" alt="">
