--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         <a class="spotlight" href="gallery/blue suinshine.jpg">
             <img src="gallery/blue suinshine_tn.jpg" alt="">
         </a>
-        <a class="spotlight" href="">
-            <img src="thumb" alt="">
+        <a class="spotlight" href="gallery/do you smell the sea.png">
+            <img src="gallery/do you smell the sea_tn.jpg" alt="">
         </a>
-        <a class="spotlight" href="">
-            <img src="thumb" alt="">
+        <a class="spotlight" href="gallery/lie.png">
+            <img src="gallery/lie_tn.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/liminal sounds.png">
+            <img src="" alt="gallery/liminal sounds_tn.jpg">
+        </a>
+        <a class="spotlight" href="gallery/the pale knight.png">
+            <img src="gallery/the pale knight_tn.jpg" alt="">
         </a>
     </p>
 </body>
