--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
         <a class="spotlight" href="gallery/the pale knight.png">
             <img src="gallery/the pale knight_tn.jpg" alt="">
         </a>
+        <a class="spotlight" href="gallery/think.jpg">
+            <img src="gallery/think_tn.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/untitled.png">
+            <img src="gallery/untitled_tn.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/wakeup.png">
+            <img src="gallery/wakeup_tn.jpg" alt="">
+        </a>
+    </p>
+    <p class="spotlight">
+        <b>logos/content creator commissions</b>
+        <a class="spotlight" href="gallery/calphon_stream_background.png">
+            <img src="gallery/calphon_stream_background_tn.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/nrt_no_border.png">
+            <img src="gallery/nrt_no_border_tn.png" alt="">
+        </a>
+        <a class="spotlight" href="gallery/nicklogofinal2.png">
+            <img src="gallery/nicklogofinal2_tn.jpg" alt="">
+        </a>
     </p>
 </body>
 </html>
