spaces to underscores

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <p class="spotlight-group">
         <b>album art</b>
-        <a class="spotlight" href="gallery/blue suinshine.jpg">
-            <img src="gallery/blue suinshine_tn.jpg" alt="">
+        <a class="spotlight" href="gallery/blue_suinshine.jpg">
+            <img src="gallery/blue_suinshine_tn.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/do you smell the sea.png">
-            <img src="gallery/do you smell the sea_tn.jpg" alt="">
+        <a class="spotlight" href="gallery/do_you_smell_the_sea.png">
+            <img src="gallery/do_you smell_the_sea_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/lie.png">
             <img src="gallery/lie_tn.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/liminal sounds.png">
-            <img src="" alt="gallery/liminal sounds_tn.jpg">
+        <a class="spotlight" href="gallery/liminal_sounds.png">
+            <img src="" alt="gallery/liminal_sounds_tn.jpg">
         </a>
-        <a class="spotlight" href="gallery/the pale knight.png">
-            <img src="gallery/the pale knight_tn.jpg" alt="">
+        <a class="spotlight" href="gallery/the_pale_knight.png">
+            <img src="gallery/the_pale_knight_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/think.jpg">
             <img src="gallery/think_tn.jpg" alt="">
