--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="gallery/blue_suinshine_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/do_you_smell_the_sea.png">
-            <img src="gallery/do_you smell_the_sea_tn.jpg" alt="">
+            <img src="gallery/do_you_smell_the_sea_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/lie.png">
             <img src="gallery/lie_tn.jpg" alt="">
