--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="gallery/lie_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/liminal_sounds.png">
-            <img src="" alt="gallery/liminal_sounds_tn.jpg">
+            <img src="gallery/liminal_sounds_tn.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/the_pale_knight.png">
             <img src="gallery/the_pale_knight_tn.jpg" alt="">
