--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>
+        <a align="center" href="https://www.ethanhen.com">ethanhen</a>
+    </h1>
     <p class="spotlight-group">
         <b>album art</b>
         <a class="spotlight" href="gallery/blue_suinshine.jpg">
