--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <p class="spotlight-group">
         <h1>
-            <a align="center" href="https://www.ethanhen.com">ethanhen</a>
+            <a align="center" href="https://ethanhen.com">ethanhen</a>
         </h1>
-
         <b>album art</b>
         <a class="spotlight" href="gallery/blue_suinshine.jpg">
             <img src="gallery/blue_suinshine_tn.jpg" alt="">
