--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <a class="spotlight" href="gallery/nicklogofinal2.png">
             <img src="gallery/nicklogofinal2_tn.jpg" alt="">
         </a>
+        <a class="spotlight" href="gallery/dec_pug_FINAL.png">
+            <img src="gallery/dec_pug_FINAL_tn.jpg" alt="">
+        </a>
     </p>
 </body>
 </html>
