import from aws

--- a/index.html
+++ b/index.html
@@ -1,57 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no">
-    <script src="spotlight.bundle.js"></script>
-    <title>ethanhen gallery</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>ethanhen</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="/table.css">
+  <script src="js/modernizr-2.8.3.min.js"></script>
 </head>
+
 <body>
-    <p class="spotlight-group">
-        <h1>
-            <a align="center" href="https://ethanhen.com">ethanhen</a>
-        </h1>
-        <b>album art</b>
-        <a class="spotlight" href="gallery/blue_suinshine.jpg">
-            <img src="gallery/blue_suinshine_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/do_you_smell_the_sea.png">
-            <img src="gallery/do_you_smell_the_sea_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/lie.png">
-            <img src="gallery/lie_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/liminal_sounds.png">
-            <img src="gallery/liminal_sounds_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/the_pale_knight.png">
-            <img src="gallery/the_pale_knight_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/think.jpg">
-            <img src="gallery/think_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/untitled.png">
-            <img src="gallery/untitled_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/wakeup.png">
-            <img src="gallery/wakeup_tn.jpg" alt="">
-        </a>
-    </p>
-    <p class="spotlight">
-        <b>logos/content creator commissions</b>
-        <a class="spotlight" href="gallery/calphon_stream_background.png">
-            <img src="gallery/calphon_stream_background_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/nrt_no_border.png">
-            <img src="gallery/nrt_no_border_tn.png" alt="">
-        </a>
-        <a class="spotlight" href="gallery/nicklogofinal2.png">
-            <img src="gallery/nicklogofinal2_tn.jpg" alt="">
-        </a>
-        <a class="spotlight" href="gallery/dec_pug_FINAL.png">
-            <img src="gallery/dec_pug_FINAL_tn.jpg" alt="">
-        </a>
-    </p>
+  <main>
+    <center><h2>ethanhen</h2></center>
+    <br>
+    <br>
+    <table id="indexlist">
+      <tr class="indexhead"><th class="indexcolicon"><img src="/icons/blank.svg" alt="[ICO]"></th>
+        <th class="indexcolname">Name</th>
+        <th class="indexcollastmod">Last modified</th>
+        <th class="indexcolsize">Size</th>
+      </tr>
+          <td class="indexcolicon"><a href="datakeeper.html/"><img src="/icons/folder.svg" alt="[DIR]"></a></td>
+          <td class="indexcolname"><a href="datakeeper.html">datakeeper/</a></td>
+          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
+        </tr>
+        <tr class="even-dir">
+          <td class="indexcolicon"><a href="request.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
+          <td class="indexcolname"><a href="request.html">plex_media_request</a></td>
+          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
+        </tr>
+      </table>
+    </div>
+  </main>
 </body>
 </html>
