--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/table.css">
+  <link rel="stylesheet" href="table.css">
   <script src="js/modernizr-2.8.3.min.js"></script>
 </head>
 
