--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </tr>
         <tr class="even-dir">
           <td class="indexcolicon"><a href="request.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
-          <td class="indexcolname"><a href="request.html">plex_media_request</a></td>
+          <td class="indexcolname"><a href="request.html">Plex Media Requests Go Here</a></td>
+          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
+        </tr>
+        <tr class="odd-dir">
+          <td class="indexcolicon"><a href="gallery.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
+          <td class="indexcolname"><a href="gallery.html">gallery</a></td>
           <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
         </tr>
       </table>
