--- a/public/Tools/index.html
+++ b/public/Tools/index.html
@@ -41,6 +41,11 @@
 				<td class="indexcolname"><a href="WindowsPhotoViewerFix.reg">WindowsPhotoViewerFix.reg</a></td>
 				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">2.09 KB</td>
 			</tr>
+			<tr class="even-dir">
+				<td class="indexcolicon"><a href="install.sh"><img src="/icons/package.svg" alt="[DIR]"></a></td>
+				<td class="indexcolname"><a href="install.sh">install.sh</a></td>
+				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">3.28 KB</td>
+			</tr>
 		</tr>
 	</table>
 </main>
