added new nrt logo

--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,9 @@
         <a class="spotlight" href="gallery/nrt_no_border.png">
             <img src="gallery/nrt_no_border_tn.png" alt="">
         </a>
+        <a class="spotlight" href="gallery/nrt303.png">
+            <img src="gallery/nrt303_tn.png" alt="">
+        </a>
         <a class="spotlight" href="gallery/nicklogofinal2.png">
             <img src="gallery/nicklogofinal2_tn.jpg" alt="">
         </a>
