added a whole lot

--- a/gallery.html
+++ b/gallery.html
@@ -14,46 +14,127 @@
         </h1>
         <b>album art</b>
         <a class="spotlight" href="gallery/blue_suinshine.jpg">
-            <img src="gallery/blue_suinshine_tn.jpg" alt="">
+            <img src="gallery/thumb/blue_suinshine.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/do_you_smell_the_sea.png">
-            <img src="gallery/do_you_smell_the_sea_tn.jpg" alt="">
+            <img src="gallery/thumb/do_you_smell_the_sea.png" alt="">
         </a>
         <a class="spotlight" href="gallery/lie.png">
-            <img src="gallery/lie_tn.jpg" alt="">
+            <img src="gallery/thumb/lie.png" alt="">
         </a>
         <a class="spotlight" href="gallery/liminal_sounds.png">
-            <img src="gallery/liminal_sounds_tn.jpg" alt="">
+            <img src="gallery/thumb/liminal_sounds.png" alt="">
         </a>
         <a class="spotlight" href="gallery/the_pale_knight.png">
-            <img src="gallery/the_pale_knight_tn.jpg" alt="">
+            <img src="gallery/thumb/the_pale_knight.png" alt="">
         </a>
         <a class="spotlight" href="gallery/think.jpg">
-            <img src="gallery/think_tn.jpg" alt="">
+            <img src="gallery/thumb/think.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/untitled.png">
-            <img src="gallery/untitled_tn.jpg" alt="">
+            <img src="gallery/thumb/untitled.png" alt="">
         </a>
         <a class="spotlight" href="gallery/wakeup.png">
-            <img src="gallery/wakeup_tn.jpg" alt="">
+            <img src="gallery/thumb/wakeup.png" alt="">
         </a>
     <p class="spotlight">
         <b>logos/content creator commissions</b>
         <a class="spotlight" href="gallery/calphon_stream_background.png">
-            <img src="gallery/calphon_stream_background_tn.jpg" alt="">
-        </a>
+            <img src="gallery/thumb/calphon_stream_background.png" alt="">
+        </a>        
         <a class="spotlight" href="gallery/nrt_no_border.png">
-            <img src="gallery/nrt_no_border_tn.png" alt="">
+            <img src="gallery/thumb/nrt_no_border.png" alt="">
         </a>
         <a class="spotlight" href="gallery/nrt303.png">
-            <img src="gallery/nrt303_tn.png" alt="">
+            <img src="gallery/thumb/nrt303.png" alt="">
         </a>
         <a class="spotlight" href="gallery/nicklogofinal2.png">
-            <img src="gallery/nicklogofinal2_tn.jpg" alt="">
+            <img src="gallery/thumb/nicklogofinal2.png" alt="">
         </a>
         <a class="spotlight" href="gallery/dec_pug_FINAL.png">
-            <img src="gallery/dec_pug_FINAL_tn.jpg" alt="">
+            <img src="gallery/thumb/dec_pug_FINAL.png" alt="">
         </a>
     </p>
+     <p class="spotlight">
+        <b>photography</b>
+        <a class="spotlight" href="gallery/000209590025.jpg">
+            <img src="gallery/thumb/000209590025.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/000305140013.jpg">
+            <img src="gallery/thumb/000305140013.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/000305140015.jpg">
+            <img src="gallery/thumb/000305140015.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0051.jpg">
+            <img src="gallery/thumb/_DSC0051.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0056.jpg">
+            <img src="gallery/thumb/_DSC0056.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0186.jpg">
+            <img src="gallery/thumb/_DSC0186.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0792.jpg">
+            <img src="gallery/thumb/_DSC0792.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0794.jpg">
+            <img src="gallery/thumb/_DSC0794.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0874.jpg">
+            <img src="gallery/thumb/_DSC0874.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/_DSC0908.jpg">
+            <img src="gallery/thumb/_DSC0908.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005980-R1-014-5A.jpg">
+            <img src="gallery/thumb/mjtest6000005980-R1-014-5A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005980-R1-020-8A.jpg">
+            <img src="gallery/thumb/mjtest6000005980-R1-020-8A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005980-R1-046-21A.jpg">
+            <img src="gallery/thumb/mjtest6000005980-R1-046-21A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005980-R1-054-25A.jpg">
+            <img src="gallery/thumb/mjtest6000005980-R1-054-25A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005982-R1-012-4A.jpg">
+            <img src="gallery/thumb/mjtest6000005982-R1-012-4A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005982-R1-014-5A.jpg">
+            <img src="gallery/thumb/mjtest6000005982-R1-014-5A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005982-R1-026-11A.jpg">
+            <img src="gallery/thumb/mjtest6000005982-R1-026-11A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005983-R1-011-4.jpg">
+            <img src="gallery/thumb/mjtest6000005983-R1-011-4.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005983-R1-039-18.jpg">
+            <img src="gallery/thumb/mjtest6000005983-R1-039-18.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005983-R1-067-32.jpg">
+            <img src="gallery/thumb/mjtest6000005983-R1-067-32.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005984-R1-021-9.jpg">
+            <img src="gallery/thumb/mjtest6000005984-R1-021-9.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005984-R1-037-17.jpg">
+            <img src="gallery/thumb/mjtest6000005984-R1-037-17.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000005984-R1-057-27.jpg">
+            <img src="gallery/thumb/mjtest6000005984-R1-057-27.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000006501-R1-008-2A.jpg">
+            <img src="gallery/thumb/mjtest6000006501-R1-008-2A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000006502-R1-005-1.jpg">
+            <img src="gallery/thumb/mjtest6000006502-R1-005-1.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/mjtest6000006503-R1-003-0.jpg">
+            <img src="gallery/thumb/mjtest6000006503-R1-003-0.jpg" alt="">
+        </a>
+     </p>
 </body>
 </html>
