fixed thumb  references

--- a/gallery.html
+++ b/gallery.html
@@ -17,30 +17,30 @@
             <img src="gallery/thumb/blue_suinshine.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/do_you_smell_the_sea.png">
-            <img src="gallery/thumb/do_you_smell_the_sea.png" alt="">
+            <img src="gallery/thumb/do_you_smell_the_sea.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/lie.png">
-            <img src="gallery/thumb/lie.png" alt="">
+            <img src="gallery/thumb/lie.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/liminal_sounds.png">
-            <img src="gallery/thumb/liminal_sounds.png" alt="">
+            <img src="gallery/thumb/liminal_sounds.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/the_pale_knight.png">
-            <img src="gallery/thumb/the_pale_knight.png" alt="">
+            <img src="gallery/thumb/the_pale_knight.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/think.jpg">
             <img src="gallery/thumb/think.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/untitled.png">
-            <img src="gallery/thumb/untitled.png" alt="">
+            <img src="gallery/thumb/untitled.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/wakeup.png">
-            <img src="gallery/thumb/wakeup.png" alt="">
+            <img src="gallery/thumb/wakeup.jpg" alt="">
         </a>
     <p class="spotlight">
         <b>logos/content creator commissions</b>
         <a class="spotlight" href="gallery/calphon_stream_background.png">
-            <img src="gallery/thumb/calphon_stream_background.png" alt="">
+            <img src="gallery/thumb/calphon_stream_background.jpg" alt="">
         </a>        
         <a class="spotlight" href="gallery/nrt_no_border.png">
             <img src="gallery/thumb/nrt_no_border.png" alt="">
@@ -49,10 +49,10 @@
             <img src="gallery/thumb/nrt303.png" alt="">
         </a>
         <a class="spotlight" href="gallery/nicklogofinal2.png">
-            <img src="gallery/thumb/nicklogofinal2.png" alt="">
+            <img src="gallery/thumb/nicklogofinal2.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/dec_pug_FINAL.png">
-            <img src="gallery/thumb/dec_pug_FINAL.png" alt="">
+            <img src="gallery/thumb/dec_pug_FINAL.jpg" alt="">
         </a>
     </p>
      <p class="spotlight">
