removed leading underscores

--- a/gallery.html
+++ b/gallery.html
@@ -66,26 +66,26 @@
         <a class="spotlight" href="gallery/000305140015.jpg">
             <img src="gallery/thumb/000305140015.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0051.jpg">
-            <img src="gallery/thumb/_DSC0051.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0051.jpg">
+            <img src="gallery/thumb/DSC0051.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0056.jpg">
-            <img src="gallery/thumb/_DSC0056.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0056.jpg">
+            <img src="gallery/thumb/DSC0056.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0186.jpg">
-            <img src="gallery/thumb/_DSC0186.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0186.jpg">
+            <img src="gallery/thumb/DSC0186.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0792.jpg">
-            <img src="gallery/thumb/_DSC0792.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0792.jpg">
+            <img src="gallery/thumb/DSC0792.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0794.jpg">
-            <img src="gallery/thumb/_DSC0794.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0794.jpg">
+            <img src="gallery/thumb/DSC0794.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0874.jpg">
-            <img src="gallery/thumb/_DSC0874.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0874.jpg">
+            <img src="gallery/thumb/DSC0874.jpg" alt="">
         </a>
-        <a class="spotlight" href="gallery/_DSC0908.jpg">
-            <img src="gallery/thumb/_DSC0908.jpg" alt="">
+        <a class="spotlight" href="gallery/DSC0908.jpg">
+            <img src="gallery/thumb/DSC0908.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/mjtest6000005980-R1-014-5A.jpg">
             <img src="gallery/thumb/mjtest6000005980-R1-014-5A.jpg" alt="">
