points to script repo

--- a/public/Tools/index.html
+++ b/public/Tools/index.html
@@ -42,8 +42,8 @@
 				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">2.09 KB</td>
 			</tr>
 			<tr class="even-dir">
-				<td class="indexcolicon"><a href="quickstart.sh"><img src="/icons/package.svg" alt="[DIR]"></a></td>
-				<td class="indexcolname"><a href="quickstart.sh">install.sh</a></td>
+				<td class="indexcolicon"><a href="https://raw.githubusercontent.com/ethanhen/ewhLinuxScripts/main/quickstart.sh"><img src="/icons/package.svg" alt="[DIR]"></a></td>
+				<td class="indexcolname"><a href="https://raw.githubusercontent.com/ethanhen/ewhLinuxScripts/main/quickstart.sh">install.sh</a></td>
 				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">3.28 KB</td>
 			</tr>
 		</tr>
