added lilleyco images

--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,9 @@
         <a class="spotlight" href="gallery/wakeup.png">
             <img src="gallery/thumb/wakeup.jpg" alt="">
         </a>
+        <a class="spotlight" href="gallery/lilley.png">
+            <img src="gallery/thumb/lilley.jpg" alt="">
+        </a>
     <p class="spotlight">
         <b>logos/content creator commissions</b>
         <a class="spotlight" href="gallery/calphon_stream_background.png">
@@ -53,6 +56,12 @@
         </a>
         <a class="spotlight" href="gallery/dec_pug_FINAL.png">
             <img src="gallery/thumb/dec_pug_FINAL.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/lilleyLEFT.png">
+            <img src="gallery/thumb/lilleyLEFT.png" alt="">
+        </a>
+        <a class="spotlight" href="gallery/lilleyRIGHT.png">
+            <img src="gallery/thumb/lilleyRIGHT.jpg" alt="">
         </a>
     </p>
      <p class="spotlight">
