--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
             <img src="gallery/thumb/dec_pug_FINAL.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/lilleyLEFT.png">
-            <img src="gallery/thumb/lilleyLEFT.png" alt="">
+            <img src="gallery/thumb/lilleyLEFT.jpg" alt="">
         </a>
         <a class="spotlight" href="gallery/lilleyRIGHT.png">
             <img src="gallery/thumb/lilleyRIGHT.jpg" alt="">
