updated hud and added cfg

--- a/public/Misc/index.html
+++ b/public/Misc/index.html
@@ -42,9 +42,14 @@
 				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">215 MB</td>
 			</tr>
 			<tr class="even-dir">
-				<td class="indexcolicon"><a href="nifty-budhud.zip"><img src="/icons/package.svg" alt="[DIR]"></a></td>
-				<td class="indexcolname"><a href="nifty-budhud.zip">nifty-budhud.zip</a></td>
-				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">22.3 MB</td>
+				<td class="indexcolicon"><a href="DUBHUD.zip"><img src="/icons/package.svg" alt="[DIR]"></a></td>
+				<td class="indexcolname"><a href="DUBHUD.zip">DUBHUD.zip</a></td>
+				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">22.7 MB</td>
+			</tr>
+			<tr class="odd-dir">
+				<td class="indexcolicon"><a href="cfg.zip"><img src="/icons/package.svg" alt="[DIR]"></a></td>
+				<td class="indexcolname"><a href="cfg.zip">cfg.zip</a></td>
+				<td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">45.0 KB</td>
 			</tr>
 		</table>
 	</main>
