--- a/index.html
+++ b/index.html
@@ -22,22 +22,18 @@
         <th class="indexcollastmod">Last modified</th>
         <th class="indexcolsize">Size</th>
       </tr>
-          <td class="indexcolicon"><a href="datakeeper.html/"><img src="/icons/folder.svg" alt="[DIR]"></a></td>
-          <td class="indexcolname"><a href="datakeeper.html">datakeeper/</a></td>
-          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
-        </tr>
-        <tr class="even-dir">
-          <td class="indexcolicon"><a href="request.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
-          <td class="indexcolname"><a href="request.html">Plex Media Requests Go Here</a></td>
-          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
-        </tr>
-        <tr class="odd-dir">
-          <td class="indexcolicon"><a href="gallery.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
-          <td class="indexcolname"><a href="gallery.html">gallery</a></td>
-          <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
-        </tr>
-      </table>
-    </div>
+      <tr class="even-dir">
+        <td class="indexcolicon"><a href="datakeeper.html/"><img src="/icons/folder.svg" alt="[DIR]"></a></td>
+        <td class="indexcolname"><a href="datakeeper.html">datakeeper/</a></td>
+        <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
+      </tr>
+      <tr class="odd-dir">
+        <td class="indexcolicon"><a href="gallery.html/"><img src="/icons/blank.svg" alt="[DIR]"></a></td>
+        <td class="indexcolname"><a href="gallery.html">gallery</a></td>
+        <td class="indexcollastmod">ethan is too lazy to do this</td><td class="indexcolsize">  - </td>
+      </tr>
+    </table>
+    <center><h3><a href="contact.html">contact</a></h3></center>
   </main>
 </body>
 </html>
