updated contact methods

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,14 @@
 <body>
   <main>
     <center><h2>contact</h2></center>
-    <a href="https://discord.com/users/327814868231258114">
-      <img src="/icons/discord.svg" width="100px">
-    </a>
-    <a href="mailto:admin@ethanhen.com">
-      <img src="/icons/email.svg" width="100px">
-    </a>
+    <center>
+      <a href="https://discord.com/users/327814868231258114" style="text-decoration : none">
+        <img src="/icons/discord.svg" width="100px" >
+      </a>
+      <a href="mailto:admin@ethanhen.com" style="text-decoration : none">
+        <img src="/icons/email.svg" width="100px">
+      </a>
+    </center>
+    
   </main>
 </body>
