--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
     <center><h2>contact</h2></center>
     <center>
       <a href="https://discord.com/users/327814868231258114" style="text-decoration : none">
-        <img src="/icons/discord.svg" width="100px" >
+        <img src="/icons/discord.svg" width="100px" class="filter-white-grey">
       </a>
       <a href="mailto:admin@ethanhen.com" style="text-decoration : none">
-        <img src="/icons/email.svg" width="100px">
+        <img src="/icons/email.svg" width="100px" class="filter-white-grey">
       </a>
     </center>
     
