--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
       <a href="mailto:admin@ethanhen.com" style="text-decoration : none">
         <img src="/icons/email.svg" width="100px" class="filter-white-grey">
       </a>
+      <a href="index.html">back</a>
     </center>
     
   </main>
