--- a/gallery.html
+++ b/gallery.html
@@ -213,6 +213,30 @@
         <a class="spotlight" href="gallery/mjtest6000009680-R1-050-23A.jpg">
             <img src="gallery/thumb/mjtest6000009680-R1-050-23A.jpg" alt="">
         </a>
+        <a class="spotlight" href="gallery/AA014A.jpg">
+            <img src="gallery/thumb/AA014A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA018A.jpg">
+            <img src="gallery/thumb/AA018A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA025A.jpg">
+            <img src="gallery/thumb/AA025A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA026.jpg">
+            <img src="gallery/thumb/AA026.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA035.jpg">
+            <img src="gallery/thumb/AA035.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA007A.jpg">
+            <img src="gallery/thumb/AA007A.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA007A_1.jpg">
+            <img src="gallery/thumb/AA007A_1.jpg" alt="">
+        </a>
+        <a class="spotlight" href="gallery/AA014.jpg">
+            <img src="gallery/thumb/AA014.jpg" alt="">
+        </a>
      </p>
 </body>
 </html>
